# javcap

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  dev.sh  justfile  run.lua  run.sh  typos.toml
.github/: release.yml
.github/workflows/: ci.yml  daily.yml  release.yml
backend/: Cargo.toml
backend/macros/src/: lib.rs
backend/src/: bar.rs  info.rs  lib.rs
backend/src/check/: mod.rs  network.rs
backend/src/engine/: javbus.rs  javdb.rs
backend/src/task/: avatar.rs  mod.rs
backend/src/task/video/: info.rs  mod.rs  parser.rs  subtitle.rs
backend/src/task/video/engine/: avsox.rs  jav321.rs  javbus.rs  javdb.rs  javlib.rs  mgstage.rs
backend/src/task/video/translate/: app_world.rs  mod.rs  youdao.rs
config/: Cargo.toml  config.default.toml
config/src/: lib.rs
crates/app/: Cargo.toml  build.rs
crates/app/src/: lib.rs  url.rs
crates/backend/: Cargo.toml  movie.nfo
crates/backend/macros/: Cargo.toml
crates/backend/macros/src/: lib.rs
crates/backend/src/: avatar.rs  bar.rs  info.rs  lib.rs  translate.rs  video.rs
crates/backend/src/engine/: airav.rs  avsox.rs  jav321.rs  javbus.rs  javdb.rs  javlib.rs  macros.rs  mgstage.rs  mod.rs
crates/backend/src/task/: avatar.rs
crates/backend/src/task/video/: info.rs  mod.rs  parser.rs
crates/backend/src/task/video/engine/: avsox.rs  jav321.rs  javdb.rs  mgstage.rs
crates/backend/src/translate/: mod.rs
crates/config/: Cargo.toml  config.default.toml
crates/config/src/: helper.rs  input.rs  lib.rs  network.rs  output.rs  the_porn_db.rs  translator.rs  url.rs  video.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/http-client/: Cargo.toml
crates/http-client/src/: lib.rs
crates/javcap/: Cargo.toml  banner
crates/javcap/src/: app.rs  bar.rs  helper.rs  lib.rs  main.rs  message.rs  payload.rs
crates/nfo/: Cargo.toml
crates/nfo/src/: lib.rs
crates/spider/: Cargo.toml
crates/spider/src/: airav.rs  avsox.rs  cable.rs  fc2ppv_db.rs  hbox.rs  jav321.rs  javdb.rs  lib.rs  missav.rs  porny.rs  subtitle_cat.rs  the_porn_db.rs
crates/translator/: Cargo.toml
crates/translator/src/: deepl.rs  lib.rs  openai.rs  youdao.rs
crates/video/: Cargo.toml
crates/video/src/: lib.rs
javcap/: Cargo.toml  build.rs
javcap/src/: app.rs  bar.rs  main.rs
logs/: info.2024-04-12
video/: Cargo.toml
video/src/: lib.rs
