[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/config",
    "crates/javcap",
    "crates/nfo",
    "crates/spider",
    "crates/translator",
    "crates/video",
]

[workspace.dependencies]
config = { path = "crates/config" }
app = { path = "crates/app" }
video = { path = "crates/video" }
nfo = { path = "crates/nfo" }
spider = { path = "crates/spider" }
translator = { path = "crates/translator" }

anyhow = "1.0.95"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
    "time",
] }
whoami = "1.5.2"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }
nom = "8.0.0"
indoc = "2.0.5"
getset = "0.1.4"
ratelimit = "0.10.0"
async-trait = "0.1.86"
reqwest = { version = "0.12.12", features = ["json"] }
uuid = { version = "1.13.1", features = ["v4"] }
sha256 = "1.5.0"
colored = "3.0.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
