[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros" }

reqwest.workspace = true
scraper.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
nom.workspace = true
indoc.workspace = true
indicatif.workspace = true
console.workspace = true
base64.workspace = true
anyhow.workspace = true
config.workspace = true
walkdir.workspace = true
