[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest.workspace = true
scraper.workspace = true
error.workspace = true
async-trait.workspace = true
video.workspace = true
tokio.workspace = true
tera.workspace = true
serde.workspace = true
tracing.workspace = true
