[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
app.workspace = true

anyhow.workspace = true
tokio.workspace = true
whoami.workspace = true
toml.workspace = true
serde.workspace = true
validator.workspace = true
log.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
