[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
app.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
validator.workspace = true
whoami.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-case.workspace = true
