[package]
name = "error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
thiserror.workspace = true
toml.workspace = true
indicatif.workspace = true
nom.workspace = true
reqwest.workspace = true
