[package]
name = "javcap"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config.workspace = true
tokio.workspace = true
backend.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
time.workspace = true
console.workspace = true
indicatif.workspace = true
reqwest.workspace = true
anyhow.workspace = true
