[package]
name = "javcap"
version = "0.1.0"
edition = "2021"

[dependencies]
app.workspace = true
config.workspace = true
video.workspace = true
nfo.workspace = true
spider.workspace = true
translator.workspace = true

tokio.workspace = true
anyhow.workspace = true
validator.workspace = true
getset.workspace = true
colored.workspace = true
log.workspace = true
env_logger.workspace = true
whoami.workspace = true
self_update.workspace = true
bon.workspace = true
chrono.workspace = true
target-triple.workspace = true
