[package]
name = "spider"
version = "0.1.0"
edition = "2021"

[dependencies]
nfo.workspace = true
video.workspace = true
config.workspace = true
http-client.workspace = true

anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
bon.workspace = true
serde.workspace = true
tokio.workspace = true
scraper.workspace = true
