[package]
name = "translator"
version = "0.1.0"
edition = "2024"

[dependencies]
config.workspace = true

async-trait.workspace = true
anyhow.workspace = true
ratelimit.workspace = true
tokio.workspace = true
uuid.workspace = true
serde.workspace = true
reqwest.workspace = true
sha256.workspace = true
log.workspace = true
bon.workspace = true
async-openai.workspace = true
indoc.workspace = true
