[package]
name = "translator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
async-trait.workspace = true
bon.workspace = true
config.workspace = true
deeplx.workspace = true
indoc.workspace = true
log.workspace = true
ratelimit.workspace = true
reqwest.workspace = true
serde.workspace = true
sha256.workspace = true
tokio.workspace = true
uuid.workspace = true

